<resources>
    <string name="app_name">Swipe>>Go</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_signin">SigninActivity</string>

    <string name="btn_sign_in">Sign in with Google</string>
    <string name="btn_logout_from_google">Logout from Google</string>
    <string name="btn_revoke_access">Revoke Access</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_add_event">AddEventActivity</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="title_activity_preferences">PreferencesActivity</string>


    <string-array name="Categories">
        <item name="studyBreaks">Study breaks</item>
        <item name="concerts">Concerts</item>
        <item name="parties">Parties</item>
        <item name="infoSessions">Info Sessions</item>
        <item name="seminars">Seminars</item>
    </string-array>

    <string name="studyBreaks">Study breaks</string>
    <string name="concerts">Concerts</string>
    <string name="parties">Parties</string>
    <string name="infoSessions">Info Sessions</string>
    <string name="seminars">Seminars</string>


    <string name="AddEventTitle">Title</string>
    <string name="AddEventDescriptionHint">Description</string>
    <string name="createEvent">Create event</string>
    <string name="AddEventLocation">Location:</string>AddEventContact
    <string name="AddEventDate">Date:</string>
    <string name="AddEventStartTime">Time:</string>
    <string name="AddEventEndTime">End time:</string>
    <string name="AddEventOpenTo">Open to</string>
    <string name="AddEventSponsor">Sponsor</string>
    <string name="AddEventContact">Contact:</string>
    <string name="categoryType">Please choose your event category</string>
    <string name="categoryType1">Please choose your event category</string>
    <string name="about">Are you bored and looking for events to put in your schedule? \n\nThen, this app is just for you. \n\n
        Events are be matched with you according to your preferences and
    if you\'re interested in a certain event, you can add it to your phone\'s calendar with a simple
        swipe to the right, otherwise you can skip it with a simple swipe to the left. \n\n
        Swipe>>Go is a tinder for events. :)\n\n
        You can update your preferences using the menu on the top left of the screen.\n\n
        You can also add new events to our events database using the menu on the top left of the screen. \n\n

        Swipe And Go ;)!</string>
</resources>
