<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:bootstrap="http://schemas.android.com/apk/res-auto"
    tools:context="com.team_scream_mit.scream.AddEventActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="60px"
        android:orientation="vertical">
        <Spinner
            android:id="@+id/category"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:prompt="@string/categoryType"
            android:entries="@array/Categories"
            android:spinnerMode="dropdown">
        </Spinner>

        <EditText
            android:id="@+id/title"
            android:layout_height="wrap_content"
            android:hint="@string/AddEventTitle"
            android:inputType="textPersonName"
            android:layout_width="fill_parent"/>
        <EditText
            android:id="@+id/description"
            android:layout_height="wrap_content"
            android:hint="@string/AddEventDescriptionHint"
            android:inputType="textMultiLine"
            android:lines="1"
            android:layout_width="fill_parent"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/add_event_padding"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="200px"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="@dimen/add_event_row"
                    android:textSize="8pt"
                    android:text="@string/AddEventLocation"/>
                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="@dimen/add_event_row"
                    android:textSize="8pt"
                    android:text="@string/AddEventDate"/>
                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="200px"
                    android:textSize="8pt"
                    android:text="Time:"/>
                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="@dimen/add_event_row"
                    android:textSize="8pt"
                    android:text="@string/AddEventContact"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <EditText
                    android:id="@+id/location"
                    android:layout_height="@dimen/add_event_row"
                    android:inputType="textPersonName"
                    android:layout_width="400px"/>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <EditText
                        android:id="@+id/dateDay"
                        android:layout_height="@dimen/add_event_row"
                        android:inputType="number"
                        android:ems="2"
                        android:hint="dd"
                        android:layout_width="fill_parent"/>
                    <EditText
                        android:id="@+id/dateMonth"
                        android:layout_height="@dimen/add_event_row"
                        android:inputType="number"
                        android:ems="2"
                        android:hint="mm"
                        android:layout_width="fill_parent"/>
                    <EditText
                        android:id="@+id/dateYear"
                        android:layout_height="@dimen/add_event_row"
                        android:inputType="number"
                        android:ems="2"
                        android:hint="yy"
                        android:layout_width="fill_parent"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="130px"
                        android:layout_height="@dimen/add_event_row"
                        android:textSize="8pt"
                        android:text="  FROM:"/>

                    <EditText
                        android:id="@+id/startTimeHour"
                        android:layout_height="@dimen/add_event_row"
                        android:inputType="number"
                        android:ems="2"
                        android:hint="hour"
                        android:layout_width="fill_parent">
                    </EditText>
                    <EditText
                        android:id="@+id/startTimeMin"
                        android:layout_height="@dimen/add_event_row"
                        android:inputType="number"
                        android:ems="2"
                        android:hint="min"
                        android:layout_width="fill_parent">
                    </EditText>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="130px"
                        android:layout_height="@dimen/add_event_row"
                        android:textSize="8pt"
                        android:text="  TO:"/>
                    <EditText
                        android:id="@+id/endTimeHour"
                        android:layout_height="@dimen/add_event_row"
                        android:inputType="number"
                        android:ems="2"
                        android:hint="hour"
                        android:layout_width="fill_parent">
                    </EditText>
                    <EditText
                        android:id="@+id/endTimeMin"
                        android:layout_height="@dimen/add_event_row"
                        android:inputType="number"
                        android:ems="2"
                        android:hint="min"
                        android:layout_width="fill_parent">
                    </EditText>
                </LinearLayout>
                <EditText
                    android:id="@+id/contact"
                    android:layout_height="@dimen/add_event_row"
                    android:inputType="textEmailAddress"
                    android:layout_width="400px">
                </EditText>
            </LinearLayout>

        </LinearLayout>
        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="Create this event"
            android:textSize="20dp"
            android:background="#9370DB"
            />
    </LinearLayout>



</RelativeLayout>
